[gd_scene load_steps=5 format=2]

[ext_resource path="res://BadBullet.gd" type="Script" id=1]
[ext_resource path="res://bad_bullet.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "bullet",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 10.653

[node name="BadBullet" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 0.248817 )
scale = Vector2( 0.025, 0.025 )
frames = SubResource( 1 )
animation = "bullet"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.0622056, 0.18661 )
scale = Vector2( 1.10575, 1.15551 )
[connection signal="area_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_Visibility_screen_exited"]
